--- a/templates/index.html
+++ b/templates/index.html
@@ -3,44 +3,48 @@
 {% block content %}
     <h1>{% block title %} Stock Visualizer {% endblock %} </h1>
     <form method="post">
+
         <label for="stock">Stock: </label>
-        <br>
-        <select name="stock"
-                placeholder="stock"
-                value="{{ request.form[stock] }}"></input>
-        <br>
-
-        <label for="chart type">Chart Type: </label>
-        <br>
-        <select name="chart type"
-                placeholder="chart type"
-                value="{{ request.form[chart type] }}"></input>
+            <select name="stock" id="stock">
+                {% for stock in symbol_list %}
+                <option value="{{ stock }}">{{ stock }}</option>
+                {% endfor %}
+            </select>
         <br>
 
-        <label for="time series">Time Series: </label>
+        <label for="chart">Chart Type: </label>
+            <select name="chart" id="chart">
+                {% for chart in chart_choice %}
+                <option value="{{ chart }}">{{ chart }}</option>
+                {% endfor %}
+            </select>
         <br>
-        <select name="time series"
-                placeholder="time series"
-                value="{{ request.form[time series] }}"></input>
+
+        <label for="time">Chart Type: </label>
+            <select name="time" id="time">
+                {% for time in time_choice %}
+                <option value="{{ time }}">{{ time }}</option>
+                {% endfor %}
+            </select>
         <br>
 
         <label for="start date">Start Date: </label>
-        <br>
-        <input type="date" name="start date"
-                placeholder="start date"
-                value="{{ request.form[start date] }}"></input>
-        <br>
+        <input type="date" name="start_date"
+                id="start date">     
+        </select>
 
         <label for="end date">End Date: </label>
-        <br>
-        <input type="date" name="end date"
-                placeholder="end date"
-                value="{{ request.form[end date] }}"></input>
+        <input type="date" name="end_date"
+                id="end date">
+        </select>
         <br>
 
         <button type="submit">Submit</button>
         
     </form>
-    
+    <section>
+        <img src = "data:image/png;base64, {{ graph }}">
+    </section>
+
 
 {% endblock %}
