no module found for pandas :(

--- a/templates/index.html
+++ b/templates/index.html
@@ -43,7 +43,7 @@
         
     </form>
     <section>
-        <img src = "data:image/png;base64, {{ graph }}">
+        <img src = "data:image/png;base64, {{ graph }}" onerror="this.onerror=null; this.src='Default.jpg'" alt="">
     </section>
 
 
